syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChallengeHistoryMaxLevel.proto";
import "ItemList.proto";
import "ChallengeInfo.proto";

message ChallengeSettleNotify {
	bool is_win = 15;
	repeated uint32 HAHAEIFMLBM = 3;
	ChallengeInfo challenge_info = 7;
	ChallengeHistoryMaxLevel max_level = 5;
	uint32 challenge_id = 4;
	uint32 score_one = 8;
	uint32 stars = 9;
	ItemList reward = 11;
	uint32 LPLJMKPBLIF = 2;
	uint32 score_two = 10;
}

